--- a/build.gradle
+++ b/build.gradle
@@ -13,10 +13,20 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+	// WEB
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
+	// Doc
+	implementation 'io.springfox:springfox-boot-starter:3.0.0'
+
+	// Database
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.flywaydb:flyway-core'
 	runtimeOnly 'com.h2database:h2'
+
+	//   Tests
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
