--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,9 @@ dependencies {
 	implementation 'org.flywaydb:flyway-core'
 	runtimeOnly 'com.h2database:h2'
 
+	// Security
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+
 	//   Tests
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
